# hid-relay

./: .clang-format-ignore  .gitignore  README.md  meson.build  meson_options.txt
.github/workflows/: build.yaml
Hardware/HIDRelayController/: HIDRelayController.kicad_pcb  HIDRelayController.kicad_prl  HIDRelayController.kicad_pro  HIDRelayController.kicad_sch  HIDRelayController.kicad_sym  HIDRelayController.xml  fp-lib-table  sym-lib-table
Hardware/HIDRelayController/HIDRelayController.pretty/: HIDRelayController.kicad_mod
cross/: HIDRelayController_cross.txt  attiny261_cross.txt  attiny461_cross.txt  attiny861_cross.txt  dcttech_2ch_cross.txt  dcttech_8ch_cross.txt
images/dcttech_2ch/: README.md  eeprom.hex  flash.hex
include/: main.h
scripts/: gen_fuses.py
src/: main.c  usbconfig.h
src/drivers/alacarte/: alacarte.c  meson.build
src/drivers/dcttech/: dcttech.c  meson.build
src/drivers/simple/: meson.build  simple.c
usbdrv/: usbdrv.c  usbdrvasm.S
